# fgbdump

./: .pre-commit-config.yaml  Cargo.toml  README.md  makefile
src/: cli.rs  lib.rs  main.rs  projection.rs
testdata/: colorado_subset_epsg8857.fgb  create_alternative_crs_data.py
