# Copyright 2025 Colton Loftus
# SPDX-License-Identifier: Apache-2.0

[package]
name = "fgbdump"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
bytesize = "2.3.1"
crossterm = "0.29.0"
flatbuffers = "=24.12.23"
flatgeobuf = "6.0.1"
geozero = "0.15.1"
proj = "0.31.0"
ratatui = "0.30.0"
reqwest = "0.12.28"
tokio = {version = "1.48.0", features = ["macros", "rt"]}
